<package format="2">
<name>safe_phri_controller</name>
<version>0.10.1</version>
<description>Controlling Franka Robotics research robots with ros_control</description>
<maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
<license>Apache 2.0</license>
<url type="website">http://wiki.ros.org/franka_example_controllers</url>
<url type="repository">https://github.com/frankaemika/franka_ros</url>
<url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
<author>Franka Robotics GmbH</author>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>
<build_depend>eigen</build_depend>
<build_export_depend>message_runtime</build_export_depend>
<depend>controller_interface</depend>
<depend>dynamic_reconfigure</depend>
<depend>eigen_conversions</depend>
<depend>franka_hw</depend>
<depend>franka_gripper</depend>
<depend>geometry_msgs</depend>
<depend>hardware_interface</depend>
<depend>joint_limits_interface</depend>
<depend>tf</depend>
<depend>tf_conversions</depend>
<depend>libfranka</depend>
<depend>pluginlib</depend>
<depend>realtime_tools</depend>
<depend>roscpp</depend>
<depend>urdf</depend>
<depend>visualization_msgs</depend>
<exec_depend>franka_control</exec_depend>
<exec_depend>franka_description</exec_depend>
<exec_depend>message_runtime</exec_depend>
<exec_depend>rospy</exec_depend>
<export>
<controller_interface plugin="${prefix}/safe_phri_controller_plugin.xml"/>
</export>
</package>